--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,11 @@ edition = "2021"
 
 [dependencies]
 nalgebra = "0.33.2"
+
+[dev-dependencies]
+rerun = "0.17.0"
+serde = "1.0.217"
+serde_json = "1.0.134"
+
+[[example]]
+name = "pose"
