--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ edition = "2021"
 
 [dependencies]
 nalgebra = "0.33.2"
+tiny-solver = "0.14.2"
+# tiny-solver = {path = "../tiny-solver-rs"}
 
 [dev-dependencies]
+env_logger = "0.11.6"
 rerun = "0.17.0"
 serde = "1.0.217"
 serde_json = "1.0.134"
